Changeset to diff entry view serialization / tests